Alignment, CSS style and Statisitcs value fix for progress-bar

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,25 @@ img {
   -o-user-drag: none;
 }
 
+/* Animations */
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
 /* .yellow {
   background-color: #FFFC31;
   color: #393E41;
